@@ -2,6 +2,7 @@ Version 1.13:
 
 	* add AccessDenied signal
 	* fix deadlock issue when sending objectpaths in signals
+	* add Path type which can be used for non-auto OBJECT_PATH handling
 
 Version 1.12:
 
